# quiz_platform

./: .env.example  LICENSE  README.md  docker-compose.yml
services/api/: Dockerfile  pyproject.toml  requirements.txt
services/api/alembic/: env.py
services/api/alembic/versions/: 0001_initial.py
services/api/app/: main.py
services/api/app/api/: deps.py  router.py
services/api/app/api/routers/: analytics.py  responses.py  surveys.py  users.py
services/api/app/core/: config.py  database.py
services/api/app/llm/: __init__.py  base.py  factory.py  g4f_client.py  openai_client.py  yandexgpt_client.py
services/api/app/models/: __init__.py  response.py  survey.py  user.py
services/api/app/repositories/: __init__.py  base.py  response_repository.py  survey_repository.py  user_repository.py
services/api/app/schemas/: analytics.py  response.py  survey.py  user.py
services/api/app/services/: analytics_service.py  response_service.py  survey_service.py
services/vk-bot/: Dockerfile  requirements.txt
services/vk-bot/bot/: api_client.py  config.py  keyboards.py  main.py  state.py
services/vk-bot/bot/handlers/: admin.py  user.py
